@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.75
-Date: 2008-12-12
+Date: 2008-12-13
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
