@@ -101,8 +101,8 @@ data(coastline.hal)
 plot(section, coastline=coastline.hal)
 # Gulf Stream
 data(a03)
-Gulf.Stream <- section.subset(a03, 124:102)
-Gulf.Stream.gridded <- section.grid(Gulf.Stream, p=seq(0,2000,10))
+Gulf.Stream <- subset(a03, indices=124:102)
+Gulf.Stream.gridded <- section.grid(Gulf.Stream, p=seq(0,2000,100))
 data(coastline.world)
 plot(Gulf.Stream.gridded, coastline=coastline.world, map.xlim=c(-80,-60))
 }
