@@ -18,13 +18,13 @@
 The \code{"approx"}, \code{"boxcar"} and \code{"lm"} methods are described in the documentation for \code{\link{ctd.decimate}}, which is used to do this processing.  The default \code{"approx"} method is best for bottle data, the \code{"boxcar"} is best for ctd data, and the \code{"lm"} method is probably too slow to recommend for exploratory work, in which it is common to do trials with a variety of \code{"p"} values.
 }
 
-\value{An object of \code{\link[base]{class}} \code{"section"} that contains stations
-whose pressure values match identically.}
+\value{An object of \code{\link[base]{class}} \code{"section"} that
+  contains stations whose pressure values match identically.}
 
 \seealso{Sections are normally created with \code{\link{read.section}}
-  or \code{\link{make.section}}.  \code{\link{section.subset}} may be
-  used to create a new section consisting of just a subset of an
-  existing station, e.g. to focus on a particular region.}
+  or \code{\link{make.section}}.  \code{\link{subset}} may be used to
+  create a new section consisting of just a subset of an existing
+  station, e.g. to focus on a particular region.}
 
 \examples{
 # Gulf Stream
@@ -32,8 +32,8 @@ library(oce)
 # File source -- http://cchdo.ucsd.edu/data_access?ExpoCode=90CT40_1
 # a03 <- read.section("a03_hy1.csv")
 data(a03)
-Gulf.Stream <- section.subset(a03, 124:102)
-Gulf.Stream.gridded <- section.grid(Gulf.Stream, p=seq(0, 5000, 10))
+Gulf.Stream <- subset(a03, indices=124:102)
+Gulf.Stream.gridded <- section.grid(Gulf.Stream, p=seq(0, 5000, 100))
 data(coastline.world)
 plot(Gulf.Stream.gridded, coastline=coastline.world, map.xlim=c(-80,-60))
 }
