@@ -1,4 +1,5 @@
 0.1.75
+- remove section.subset(), replaced by subset()
 - improve log items in functions that read and assemble oce objects
     http://code.google.com/p/r-oce/issues/detail?id=38
 - add subset.oce()
